Fixed menu alignment in verticals

--- a/wp-content/themes/engage/assets/scss/components/_filter.scss
+++ b/wp-content/themes/engage/assets/scss/components/_filter.scss
@@ -61,13 +61,24 @@
 
 .filter__item--current-parent {
   padding-left: 10px;
-  margin-left: -10px;
+  margin-left: 0px;
   border-left: 3px solid $teal;
 
   .filter__link {
     &:hover {
       transform: none;
       border: none;
+    }
+  }
+}
+
+.filter__item--top-item {
+  margin-left: -10px;
+
+  .filter__link {
+    &:hover {
+      transform: none;
+      padding-left: 10px;
     }
   }
 }
